# robot-simulator

./: .gitignore  README.md  app.py  pyproject.toml
robot_simulator/: app.py  command_processor.py  definitions.py  direction.py  point.py  robot.py  table.py
samples/: test_input_commands.txt  with_invalid_commands.txt
tests/: conftest.py  test_command_processor.py  test_direction.py  test_point.py  test_robot.py
